tests/errors/2006-3.vb
'#compiler-options:-out
'#compiler-message:Command line error BC2006 : option 'out' requires ':<file>'
'#exit-code:1